--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.47.1",
 		"react-native-fetch-blob": "^0.10.8",
-		"xml2js": "^0.4.18"
+		"react-native-xml2js": "^1.0.3"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
