--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"mathjs": "^3.16.1",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.47.1",
-		"react-native-fetch-blob": "^0.10.8",
+		"react-native-fetch-blob": "git+https://github.com/lll000111/react-native-fetch-blob",
 		"react-native-xml2js": "^1.0.3"
 	},
 	"devDependencies": {
